AWS-475: fix: checkbox lignment and filter z-index

--- a/resources/css/blocks/filter.styl
+++ b/resources/css/blocks/filter.styl
@@ -1,7 +1,7 @@
 .filter
   width 100%
   position relative
-  z-index 3
+  z-index 11 //3
   margin-bottom 10px
   & + .section
     margin-top 0
